--- a/website/src/theme/Footer/Footer.css
+++ b/website/src/theme/Footer/Footer.css
@@ -2,7 +2,9 @@
 
 footer {
   display: var(--vuu-footer-display, block);
-    width: var(--vuu-desktop-width);
+    /* width: var(--vuu-desktop-width); */
+    width: 100%;
+    background-color: var(--vuu-dark-bg-background2);
     border: 1px solid  rgba(255, 255, 255, 0.2) ;
     color: var(--vuu-dark-text-secondary);
     font-family: 'Raleway';
@@ -13,10 +15,12 @@ footer {
   
   .footer-columns {
     align-items: center; 
-    background-color: var(--vuu-dark-bg-background2);
     display: flex;
     justify-content: space-between;
+    margin: 0 auto;
     padding: 100px 193px;
+    width: var(--vuu-desktop-width);
+
   }
   
   .footer-column-logo {
